--- a/linked_products/templates/linked_products/dashboard/side_nav_inclusion.html
+++ b/linked_products/templates/linked_products/dashboard/side_nav_inclusion.html
@@ -6,7 +6,7 @@
     {% trans "Linked Products" context "Dashboard linked products list" %}
   </p>
   <ul>
-      {% if perms.linked_products.vew %}
+      {% if perms.linked_products.view %}
         <li class="{% block menu_linked_products_class %}{% endblock %}">
           <a href="{% url 'linked-product-dashboard-list' %}">
             {% trans "Links" context "Dashboard linked products list" %}
